// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton avatar shape 1`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar shape 2`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-square"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 1`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-sm infini-skeleton-avatar-circle"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 2`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-circle"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton avatar size 3`] = `
<div
  class="infini-skeleton infini-skeleton-with-avatar"
>
  <div
    class="infini-skeleton-header"
  >
    <span
      class="infini-skeleton-avatar infini-skeleton-avatar-lg infini-skeleton-avatar-circle"
    />
  </div>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 50%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph rows 1`] = `
<div
  class="infini-skeleton"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 1`] = `
<div
  class="infini-skeleton"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 93%;"
      />
    </ul>
  </div>
</div>
`;

exports[`Skeleton paragraph width 2`] = `
<div
  class="infini-skeleton"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 38%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li
        style="width: 28%;"
      />
      <li
        style="width: 93%;"
      />
      <li />
    </ul>
  </div>
</div>
`;

exports[`Skeleton title width 1`] = `
<div
  class="infini-skeleton"
>
  <div
    class="infini-skeleton-content"
  >
    <h3
      class="infini-skeleton-title"
      style="width: 93%;"
    />
    <ul
      class="infini-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width: 61%;"
      />
    </ul>
  </div>
</div>
`;
